# hfml_data_preprocessor

./: .gitignore  CHANGELOG.md  Cargo.toml  KNOWN_ISSUES.md  README.md  Settings.toml  plot.gp  plot2.gp  plot_maxpol_coeff.gp  plot_maxpol_spectrum.gp  settings_minimal.toml
gp/: plot.gp
maxpol_coefficients/: snap.0000000005296F8C  snap.000000000651A1D8  snap.00000000067629FF
postprocessing/: peak_extraction_standalone.py
src/: data.rs  main.rs  maxpol.rs  output.rs  parsing.rs  processing.rs  settings.rs
