[package]
authors = ["Pim van den Berg"]
edition = "2021"
license-file = "LICENSE"
name = "hfml_data_preprocessor"
version = "2.1.5"

[features]
cuda = ["cufft_rust"]
default = ["cuda"]

[dependencies]
anyhow = {version = "1.0.52", features = ["backtrace"]}
clap = {version = "3.0", features = ["derive"]}
cufft_rust = {version = "0.6.0", optional = true}
fast-float = "0.2.0"
float-ord = "0.3.2"
gsl_rust = "0.7.3"
itertools = "0.10.3"
log = "0.4.14"
natord = "1.0.9"
num-complex = "0.4"
num-traits = "0.2.14"
plotters = {version = "0.3.1", default-features = false, features = ["line_series", "bitmap_backend", "bitmap_encoder", "ttf"]}
rayon = "1.5.1"
rmp = "0.8.10"
ryu = "1.0.9"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
simplelog = "0.11"
smallvec = {version = "1.8.0", features = ["const_generics", "const_new", "union", "write"]}
toml = "0.5.8"

#bincode = "1.3.3"
#convolve = { version = "*", path = "../convolve" }
#sled = { version = "0.34.7", features = ["compression"] }

[build-dependencies]
built = {version = "0.5.1", features = ["chrono"]}

[profile.release]
#codegen-units = 1
debug = true
lto = "fat"
